Updated some changes

--- a/style.css
+++ b/style.css
@@ -101,8 +101,8 @@
                                      /* Box 4 */
 
 .nav-signin{
-    color : yellow;
-    padding-top: 11px;
+    color : white;
+    padding-top: 10px;
     /* display: flex;
     justify-content: center;
     align-items: center; */
